# chacha8rand

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
benches/: raw_throughput.rs  stupid.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
chacha8rand/: Cargo.toml
chacha8rand/src/: array_ref.rs  avx2.rs  backend.rs  common_guts.rs  guts.rs  lib.rs  rand_core_0_10.rs  rand_core_0_6.rs  rand_core_0_9.rs  safe_arch.rs  scalar.rs  tests.rs  widex4.rs
chacha8rand/src/avx2/: backend.rs  safe_arch.rs
chacha8rand/src/backend/: avx2.rs  details.rs  neon.rs  scalar.rs  simd128.rs  sse2.rs
chacha8rand/src/guts/: avx2.rs  neon.rs  scalar.rs  sse2.rs  widex4.rs
chacha8rand/src/neon/: backend.rs  safe_arch.rs
chacha8rand/src/safe_arch/: avx2.rs  neon.rs  sse2.rs
chacha8rand/src/simd128/: backend.rs  safe_arch.rs
chacha8rand/src/sse2/: backend.rs  safe_arch.rs
src/: backend.rs  guts.rs  lib.rs  tests.rs
src/guts/: avx2.rs  scalar.rs  simd128.rs  widex4.rs
xtask/: Cargo.toml
xtask/src/: main.rs
