[workspace]
resolver = "2"
members = [
    "benchmarks",
    "chacha8rand",
    "xtask"
]

[profile.release]
opt-level = 2
debug = "line-tables-only"

[workspace.metadata.bin]
cargo-hack = { version = "0.6.35" }
cross = { version = "0.2.5" }
wasmtime-cli = { version = "29.0.1", bins = ["wasmtime"] }
