[package]
name = "chacha8rand"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanna-kruppe/chacha8rand"
description = """
Deterministic random number generator that's robust, reproducible and fast
"""
keywords = ["no_std", "no-std", "random"]
include = [
    "../LICENSE-MIT",
    "../LICENSE-APACHE",
]

[features]
default = []
rand_core_0_6 = ["dep:rand_core"]
std = []
unstable_internals = []

[dependencies]
arrayref = "0.3.9"
rand_core = { version = "0.6.4", default-features = false, optional = true }
