[package]
name = "chacha8rand"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanna-kruppe/chacha8rand"
description = """
Reproducible, robust and (last but not least) fast pseudorandomness
"""
keywords = ["no_std", "no-std", "random"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]
readme = "../README.md"
include = [
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/src/**/*.rs",
]

[features]
default = []
rand_core_0_6 = ["dep:rand_core"]
std = []
unstable_internals = []

[dependencies]
arrayref = "0.3.9"
rand_core = { version = "0.6.4", default-features = false, optional = true }

[dev-dependencies]
getrandom = "0.2.15"
rand = "0.8.5"
uuid = "1.10.0"

[package.metadata.docsrs]
features = ["rand_core_0_6"]
targets = []
