[package]
name = "chacha8rand"
version = "0.1.2"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanna-kruppe/chacha8rand"
description = """
Reproducible, robust and (last but not least) fast pseudorandomness
"""
keywords = ["no_std", "no-std", "random"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]
readme = "../README.md"
include = [
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/src/**/*.rs",
]

[features]
default = []
rand_core_0_6 = ["dep:rand_core_0_6"]
rand_core_0_9 = ["dep:rand_core_0_9"]
std = []

[dependencies]

[dependencies.rand_core_0_6]
package = "rand_core"
version = "0.6.4"
default-features = false
optional = true

[dependencies.rand_core_0_9]
package = "rand_core"
version = "0.9.0"
default-features = false
optional = true

[dev-dependencies]
getrandom = "0.3.0"
rand = "0.9.0"
uuid = "1.10.0"

[lints.rust]
unreachable_pub = "warn"

[package.metadata.docsrs]
features = ["rand_core_0_6"]
targets = []
